# egopulse

./: .gitignore  AGENTS.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  deny.toml  e2e-dom-dump.js  e2e-test.js  egopulse.config.example.yaml  egopulse.example.toml  package-lock.json
.agents/agents/: code-reviewer.md  senior-developer.md
.agents/commands/: commit-push.md
.agents/rules/: react-best-practices.md
.agents/skills/implementation-plan/: SKILL.md
.agents/skills/pr-review-back-workflow/: extract_reviews.py
.agents/skills/requirements-definition/: SKILL.md
.agents/skills/worktree-create/: SKILL.md
.claude/agents/: other-cli-reviewer.md
.claude/commands/: check-ci-frontend.md  commit-push-pr.md  commit-push-staged.md  pr-create.md  pr-review-back.md  review-coderabbit-committed.md  review-coderabbit-uncommitted.md  review-multi-cli.md  test-fix.md
.claude/rules/: rust-best-practices.md
.claude/skills/agent-tool-test/: SKILL.md  (+1 more)
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  channel-parity.md  channels.md  commands.md  config.md  db.md  deploy.md  development.md  directory.md  mcp.md  multi-agent.md  openai-codex.md  pulse.md  refactor-as-is-to-be.md  review-notes.md  security.md  session-lifecycle.md  setup-redesign.md  sleep-execution-model.md  sleep.md  system-prompt.md  tools.md  voice-channel.md
docs/egopulse/: plan-discord-bot-bindings.md
docs/issues/: issues.md
docs/knowledge/: system-prompt-design.md
docs/microclaw-reference/: microclaw-system-prompt-files.md  microclaw-tool-inventory.md
docs/plan/: generatedEpisodeView.md  plan-accurate-token-estimation.md  plan-llm-provider-streaming.md  plan-narrow-public-surface.md  plan-repository-stabilization-phase2.md  plan-repository-stabilization-phase3.md  plan-runtime-refactor-cleanup.md  plan-secret-mode-phase1.md  plan-setup-refresh.md  plan-split-week-month-rollups.md  plan-sqlite-backup.md  plan-telegram-multi-agent-parity.md  plan-tool-progress-indicator.md  plan-tool-progress-narration.md  plan-voice-channel-agent-runtime-integration.md  plan-webhook-trigger.md  plan-webui-phase1.md  secret-mode-design.md  sleep-call3.md
docs/webui/: chat.md  command-palette.md  config.md  design-system.md  layout.md  metrics.md  mockup.html  overview.md  pulse.md  sleep-batch-audit-webui-design.md  sleep-batch.md
scripts/: install.sh
src/: agent_loop.rs  app.rs  assets.rs  builtin_skills.rs  channel.rs  channel_adapter.rs  codex_auth.rs  config.rs  config_store.rs  default_soul.md  error.rs  gateway.rs  lib.rs  llm.rs  llm_profile.rs  logging.rs  main.rs  mcp.rs  media.rs  memory.rs  runtime.rs  setup.rs  skills.rs  slash_commands.rs  sleep_batch.rs  sleep_batch_prompt.md  sleep_scheduler.rs  soul_agents.rs  status.rs  storage.rs  test_env.rs  test_util.rs  text.rs  tools.rs  web.rs
src/agent_loop/: compaction.rs  event.rs  formatting.rs  guards.rs  mod.rs  prompt_builder.rs  session.rs  session_snapshot.rs  soul_agents.rs  tool_loop.rs  tool_phase.rs  turn.rs  turn_runtime.rs
src/channel/: mod.rs  web.rs
src/channels/: adapter.rs  cli.rs  discord.rs  mod.rs  registry.rs  telegram.rs  tui.rs  voice.rs  web.rs
src/config/: loader.rs  manager.rs  mod.rs  persist.rs  resolve.rs  secret_ref.rs  tests.rs  types.rs  web_fetch.rs
src/llm/: calibration.rs  codex_auth.rs  messages.rs  mod.rs  openai.rs  responses.rs  sse.rs
src/pulse/: capsule.rs  definition.rs  due.rs  gate.rs  home_surface.rs  mod.rs  output.rs  pulse_core_contract.md  runner.rs  scheduler.rs
src/runtime/: backup_scheduler.rs  channel_input.rs  gateway.rs  ingress.rs  logging.rs  metrics.rs  mod.rs  runtime_status.rs  status.rs  supervisor.rs  tool_progress.rs  turn_scheduler.rs
src/server/: mod.rs  sse.rs
src/setup/: channels.rs  error.rs  inputs.rs  mod.rs  prompts.rs  provider.rs  slugify.rs  summary.rs  wizard.rs
src/sleep/: batch.rs  call2.rs  episodic_renderer.rs  event_extraction.rs  event_rollup.rs  extract.rs  extract_prompt.md  memory_update.rs  mod.rs  orchestrator.rs  prompt.rs  rollup.rs  rollup_month_prompt.md  rollup_prompt.md  rollup_week_prompt.md  scheduler.rs  sleep_batch_prompt_1.md
src/storage/: backup.rs  chat.rs  episode.rs  llm_usage.rs  migration.rs  mod.rs  pulse.rs  queries.rs  sleep.rs  tool.rs  turn.rs
src/tools/: activate_skill.rs  agent_send.rs  command_guard.rs  files.rs  mcp.rs  mcp_adapter.rs  mod.rs  path_guard.rs  sanitizer.rs  search.rs  send_message.rs  shell.rs  text.rs
src/web/: auth.rs  chat.rs  config.rs  health.rs  index.html  mod.rs  router.rs  sessions.rs  sse.rs  stream.rs  ui.rs  ws.rs
src/webhooks/: error.rs  formatter.rs  handler.rs  mod.rs
src/webui/: app.js  index.html  style.css
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
web/mock/: plugin.ts
web/src/: api.ts  app.css  commands.ts  diff.ts  main.tsx  styles.css  types.ts
(+228 files in other folders)
