[package]
name = "egopulse"
version = "0.1.0"
edition = "2024"
license = "MIT"
build = "build.rs"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
futures-util = "0.3"
include_dir = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serial_test = "3.2"
tempfile = "3.20"
wiremock = "0.6"
