[package]
name = "egopulse"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/endo-ly/egopulse"
build = "build.rs"

[features]
default = ["channel-discord", "channel-telegram"]
channel-discord = ["dep:serenity"]
channel-telegram = ["dep:teloxide"]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
flate2 = "1.0"
fs2 = "0.4"
futures-util = "0.3"
htmd = "0.5"
libc = "0.2"
include_dir = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "multipart"] }
rusqlite = { version = "0.39", features = ["bundled"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10"
serenity = { version = "0.12", optional = true, default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
sha2 = "0.10"
tar = "0.4"
teloxide = { version = "0.17", optional = true, default-features = false, features = ["rustls", "macros", "ctrlc_handler"] }
tempfile = "3.27"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
r2d2 = "0.8"
rand = "0.10"
readability-js = "0.1.5"
regex = "1"
rmcp = { version = "1.7", features = [
    "client",
    "reqwest",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
similar = "3.1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
dialoguer = "0.12.0"

[dev-dependencies]
serial_test = "3.4"
tempfile = "3.27"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
